# kOS

./: .clang-format  .dockerignore  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Jenkinsfile  LICENSE  README.md  bootstrap.sh  env.sh  run.sh
.circleci/: config.yml
cfg/: boot
cmake/: CMakeLists.txt  clang-format.cmake  common.cmake  edk2.cmake  format-flags.cmake
inc/kos/: array.hpp  debug.hpp  mem.hpp  ptr.hpp  string.hpp  types.hpp  view.hpp
inc/kos/boot/: efi.hpp
inc/kos/boot/efi/: alloc.hpp  cmdline.hpp  console.hpp  filesystem.hpp  libc.hpp  tar.hpp
inc/kos/instructions/: cpuid.hpp  registers.hpp
inc/kos/io/: uart.hpp  vga.hpp
include/: freestanding.h
include/kos/: idt.hpp  mem.hpp  registers.hpp  string.hpp  type_traits.hpp  types.hpp
include/kos/boot/: multiboot.hpp
include/kos/instructions/: cpuid.hpp
include/kos/io/: uart.hpp  vga.hpp
iso/boot/grub/: grub.cfg
src/: CMakeLists.txt  idt.cpp  mem.cpp  mem.cpp.new
src/boot/: CMakeLists.txt  boot.asm  boot.s  bootloader.cpp  efi.cpp  kernel.c  kmain.cpp  linker.ld  longjmp.asm  longmode.asm  multiboot.cpp
src/boot.mbr/: kmain.cpp
src/boot/efi/: CMakeLists.txt  bootloader.cpp  cmdline.cpp  console.cpp  filesystem.cpp  libc.cpp  tar.cpp
src/io/: CMakeLists.txt  vga.cpp
src/io/serial/: CMakeLists.txt  uart.cpp
src/io/vga/: CMakeLists.txt  buffer.cpp
std/: .gitattributes  CMakeLists.txt  cstddef  type_traits
tests/: CMakeLists.txt
tests/std/: CMakeLists.txt  main.cpp  type_traits.test.cpp
